--- a/example/service.yaml
+++ b/example/service.yaml
@@ -1,27 +1,26 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+kind: Service
+apiVersion: v1
 metadata:
-  name: rollout-bluegreen
-  namespace: pj-example-ns
+  name: rollout-bluegreen-active
 spec:
-  replicas: 1
-  revisionHistoryLimit: 2
   selector:
-    matchLabels:
-      app: rollout-bluegreen
-  template:
-    metadata:
-      labels:
-        app: rollout-bluegreen
-    spec:
-      containers:
-      - name: rollouts-demo
-        image: argoproj/rollouts-demo:blue
-        imagePullPolicy: Always
-        ports:
-        - containerPort: 8080
-  strategy:
-    blueGreen:
-      activeService: rollout-bluegreen-active
-      previewService: rollout-bluegreen-preview
-      autoPromotionEnabled: false
+    app: rollout-bluegreen
+  type: LoadBalancer
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: rollout-bluegreen-preview
+spec:
+  selector:
+    app: rollout-bluegreen
+  type: LoadBalancer
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 8080
